--- a/new-era-solar-client/package.json
+++ b/new-era-solar-client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "new-era-solar-client",
   "version": "0.1.0",
+  "homepage": "https://www.neweraenergies.co/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
